# finplot

./: .gitignore  .gitmodules  LICENSE.txt  README.md  build-distribute.sh  example-bitmex-ws.py  example.py  finplot.py  nuts.xcf  pyproject.toml  run-all.py  setup.py
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
finplot/: FP_AxisItem.py  FP_Color_Setting.py  FP_Setting.py  FP_Time_Tools.py  FP_Tools.py  __init__.py  _version.py  example-analyze-2.py  example-analyze.py  example-bfx.py  example-bitmex-ws.py  example-btc-long-term.py  example-cryptofeed-orderbook-realtime.py  example-embed.py  example-heatmap.py  example-line.py  example-market-profile.py  example-overlay-correlate.py  example-pandas.py  example-renko-dark-mode.py  example-renko.py  example-snp500.py  example-volume-profile.py  finplot.py  live.py  pdplot.py
finplot/examples/: analyze-2.py  analyze.py  animate.py  arrow.py  bfx.py  big.py  bitmex-ws.py  btc-long-term.py  bubble-table.py  complicated.py  dockable.py  docking_charts.py  embed.py  heatmap.py  line.py  overlay-correlate.py  pandas-df-plot.py  requirements.txt  snp500.py  volume-profile.py
